--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Amplify App using Git</title>
 </head>
 <body>
-    <h1>This should make you smile</h1>
+    <h1>This should make you or not</h1>
+    I have no idea why anyone wants to read this.
+    Okay. This really really contains nothing.
 </body>
 </html>
